deploy/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gokub-ingress
spec:
  rules:
  - http:
      paths:
      - path: /dev/gokub
        pathType: Prefix
        backend:
          service:
            name: gokub-tester
            port:
              number: 8080
